# primestack

./: Cargo.toml  README.md  build.rs
cargo-primestack/: Cargo.toml
src/: main.rs  opts.rs
src/input/: mod.rs
src/project/: mod.rs
src/templates/: Cargo.toml.template
