[package]
name = "cargo-primestack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "a tool to help run the prime stack"
homepage = "https://twitch.tv/ThePrimeagen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"

[dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
cfg-if = "0.1.2"
worker = "0.0.12"
serde_json = "1.0.67"
leptos.workspace = true

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
view = { path = "./view" }
base64 = "0.21.0"
libsql-client = "0.1.5"


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[workspace.dependencies]
# I know i am doing this wrong
leptos = { version = "0.1.1", default-features = false, features = ["serde", "ssr"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
