[package]
name = "cargo-primestack"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "a tool to help run the prime stack"
homepage = "https://twitch.tv/ThePrimeagen"

[dependencies]
anyhow = "1.0.69"
walkdir = "2.3.2"
serde_json = "1.0.67"
clap = { version = "4.2.4", features = ["derive"] }
