[package]
name = "cargo-primestack"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "a tool to help run the prime stack"
homepage = "https://twitch.tv/ThePrimeagen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
